--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+#Global configuration
 spring.application.name=watchlist
+
+#Log level configuration
+logging.level.root=ERROR
+logging.level.com.vulcanium=INFO
+logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+#Custom properties
+com.vulcanium.watchlist.apiUrl=http://www.omdbapi.com/?apikey=415e7598&
