Refactor MovieRatingService by adding multiple implementations conditioned by a custom property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 #Global configuration
 spring.application.name=watchlist
 
+#Environment configuration (possible values: dev, prod)
+app.environment=prod
+
 #Log level configuration
 logging.level.root=ERROR
 logging.level.com.vulcanium=INFO
