--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ app.environment=prod
 
 #Log level configuration
 logging.level.root=ERROR
-logging.level.com.vulcanium=INFO
+logging.level.com.vulcanium=DEBUG
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 #Custom properties
