--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,17 @@
-#Global configuration
+# Global configuration
 spring.application.name=watchlist
 
-#Environment configuration (possible values: dev, prod)
+# Environment configuration (possible values: dev, prod)
 app.environment=prod
 
-#Log level configuration
+# Log level configuration
 logging.level.root=ERROR
 logging.level.com.vulcanium=DEBUG
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
-#Custom properties
+# Actuator configuration
+management.endpoints.web.exposure.include=health,info,beans,env,metrics
+management.endpoint.env.show-values=ALWAYS
+
+# Custom properties
 com.vulcanium.watchlist.apiUrl=http://www.omdbapi.com/?apikey=415e7598&
