Add custom Actuator endpoint: /release-notes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ logging.level.com.vulcanium=DEBUG
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
 # Actuator configuration
-management.endpoints.web.exposure.include=health,info,beans,env,metrics
+management.endpoints.web.exposure.include=health,info,beans,env,metrics,release-notes
 management.endpoint.env.show-values=ALWAYS
 
 # Custom properties
